update gulpfile n css watch

--- a/src/scss/component/navigation.scss
+++ b/src/scss/component/navigation.scss
@@ -1,9 +1,9 @@
-nav {
+.nav {
     background: rgba(7, 54, 148, 0.686);
     box-shadow: 0px 1px 2px rgb(0, 8, 255), 0px 2px 5px rgb(0, 255, 145);
     position: relative;
 }
-.navMenu {
+.nav__menu {
     font-size: 0;
     text-align: center;
     > * {
