--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,12 @@
     transition: opacity .3s ease;
 }
 
-.wrapper-outside {
+.container {
     padding-top: 20px;
+}
+
+nav {
+    .container {
+        padding-top: 0;
+    }
 }
